# hotel-booking-service

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: Dockerfile  run.sh
configuration/: .env.example  Dockerfile  run.sh
src/: __init__.py  __main__.py
src/api/: __init__.py
src/api/dependencies/: service.py
src/api/services/: booking.py  hotel.py
src/api/v1/: booking.py  hotel.py
src/application/booking/interfaces/: reader.py  repo.py
src/application/hotel/interfaces/: reader.py  repo.py
src/config/: __init__.py  dependencies.py  setups.py
src/database/: dependencies.py  settings.py
src/database/crud/: booking.py  hotel.py  uow.py
src/database/migrations/: env.py
src/database/migrations/versions/: 3f0a0a18d467_feat_add_hotel_date_created.py  591d1ac34eae_init_booking_table.py  739b610938ca_fix_change_hotel_date_created.py  bd177e735916_init_hotel_table.py
src/database/models/: __init__.py  booking.py  hotel.py
src/domain/models/: common.py
src/domain/repositories/: booking.py  common.py  hotel.py
src/domain/services/: booking.py  hotel.py
src/infrastructure/config/: dependencies.py  settings.py  setups.py
src/infrastructure/db/: alembic.ini
src/presentation/api/: __init__.py
src/presentation/api/v1/: hotel.py  (+1 more)
src/presentation/schemas/: booking.py  hotel.py
src/schemas/: booking.py  hotel.py
tests/: conftest.py  utils.py
tests/test_handlers/booking/: test_add_booking.py  test_delete_booking.py  test_get_booking_list.py
tests/test_handlers/hotel/: test_add_hotel.py  test_delete_hotel.py  test_get_hotel_list.py
(+17 files in other folders)
