[tool.poetry]
name = "hotel-booking-service"
version = "0.1.0"
description = ""
authors = ["iteamurr <iteamurr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
envparse = "^0.2.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.15.2"
pydantic-settings = "^2.8.1"
sqlalchemy-utils = "^0.41.2"


[tool.poetry.group.dev.dependencies]
pyclean = "^3.1.0"
ruff = "^0.11.4"
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-aiohttp = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E501", "I"]

[tool.pytest]
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
